<resources>
    <string name="app_name">parkingSlot</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="name">Name of primary driver</string>
    <string name="address">Home/ business address</string>
    <string name="phone">Phone number</string>
    <string name="make">Vehicle Make</string>
    <string name="color">Color</string>
    <string name="model">Vehicle model</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_slote_details">SloteDetails</string>
</resources>
